engine-net-2/examples/Errors/ProcedureMethodParametersInTypeMismatch.grs
new graph "Rules.grg"

exec { n:N=null; (d:double)=n.p("42") }

quit
